--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+    font-family: Arial, sans-serif!important;
+    font-size: 16px!important;
+    line-height: 1.5!important;
     margin: 0;
     padding: 0;
+    background-color: darkcyan!important;
   }
   
   h1, h2, h3 {
