--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,11 +8,11 @@ body {
   }
   
   h1, h2, h3 {
-    font-weight: bold;
+    font-weight: bold!important;
   }
   
   img {
-    max-width: 100%;
+    max-width: 100%!important;
   }
   
   .social-icons {
