--- a/src/components/styles/Global.css
+++ b/src/components/styles/Global.css
@@ -4,7 +4,7 @@ body {
     line-height: 1.5!important;
     margin: 0!important;
     padding: 0!important;
-    background-color: darkcyan!important;
+    background-color: darkgrey!important;
   }
   
   h1, h2, h3 {
