--- a/src/components/footercomponent/Footer.css
+++ b/src/components/footercomponent/Footer.css
@@ -1,9 +1,8 @@
-img {
-  max-width: 100%!important;
-}
-
-#home {
-  margin-top: 70px;
+footer {
+  background-color: #f8f9fa;
+  padding: 30px 0;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .social-icons {
@@ -15,9 +14,4 @@ img {
 .social-icons a {
   color: #333;
   margin-right: 10px;
-}
-
-.social-icons a:hover {
-  color: #ffffff;
-  cursor: pointer;
 }
