--- a/src/components/styles/Global.css
+++ b/src/components/styles/Global.css
@@ -1,14 +1,14 @@
 body {
-    font-family: Arial, sans-serif!important;
-    font-size: 16px!important;
-    line-height: 1.5!important;
-    margin: 0!important;
-    padding: 0!important;
-    background-color: darkgrey!important;
-  }
-  
-  h1, h2, h3 {
-    font-weight: bold!important;
-  }
-  
-  
+  font-family: Arial, sans-serif !important;
+  font-size: 16px !important;
+  line-height: 1.5 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  background-color: darkgrey !important;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: bold !important;
+}
