--- a/src/components/styles/Global.css
+++ b/src/components/styles/Global.css
@@ -1,10 +1,14 @@
+
+
+
+
 body {
   font-family: Arial, sans-serif !important;
-  font-size: 16px !important;
   line-height: 1.5 !important;
   margin: 0 !important;
   padding: 0 !important;
-  background-color: darkgrey !important;
+  background-color: darkslategray;
+  overflow-x: hidden;
 }
 
 h1,
