--- a/src/components/navbarcomponent/Header.css
+++ b/src/components/navbarcomponent/Header.css
@@ -12,25 +12,32 @@
   }
   
   .navbar-toggler-icon {
-    color: #fff;
-    font-size: 1.5rem;
+    font-size: 1rem;
     border-radius: 3px;
   }
-  .navbar-toggler-icon:hover {
-    transform: rotate(90deg);
-    transition: all 0.3s ease-in-out;
-  }
-  
 
-  @media (max-width: 767px) {
+
+
+  .logo img {
+    width: auto;
+    height: 100px;
+  }
+    
+
+  @media (max-width: 768px) {
     .navbar-collapse {
       background-color: #fff;
     }
   
     .navbar-collapse .nav-link {
-      color: #fff !important;
+      color: black!important;
       padding: 10px 0 !important;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .logo img {
+      width: auto;
+      height: 50px;
     }
   }
   
