--- a/src/components/styles/Global.css
+++ b/src/components/styles/Global.css
@@ -28,7 +28,7 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   background-color: darkslategray;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 h1,
