--- a/src/components/pages/homepage/Home.css
+++ b/src/components/pages/homepage/Home.css
@@ -9,27 +9,30 @@ img {
 
 
 .social-icons-container {
-  overflow-x: hidden;
+  overflow-x: auto;
+  max-width: -500px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .social-icons {
   display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  justify-content: start;
 }
 
 .social-icons a {
   color: #333;
-  margin-right: 10px;
+  margin-right: 5;
+  margin-left: 5;
 }
 
 .social-icons a:hover {
-  color: #ffffff;
+  color: #fff;
   cursor: pointer;
 }
 
 .name-style{
   font-family: PoppinsExtraLight;
-  font-size: 5rem;
-  color: #ffffff;
+  font-size: 4rem;
+  color: #fff;
 }
