--- a/src/components/pages/projectspage/Projects.css
+++ b/src/components/pages/projectspage/Projects.css
@@ -1,10 +1,7 @@
-#projects {
-  padding: 60px 0;
-}
-
-h2 {
+#projects h2 {
+  margin-bottom: 3rem;
   text-align: center;
-  margin-bottom: 40px;
+  color: fff;
 }
 
 .card-wrapper {
@@ -16,11 +13,15 @@ h2 {
   border: none;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+.card-img-top {
+  height: auto;
+  width: 100%;
+  object-fit: cover;
+  flex-grow: 1;
 }
 
 .card-title {
@@ -33,15 +34,15 @@ h2 {
   color: #666;
 }
 
-.btn-primary {
-  background-color: #ff0066;
-  border: none;
-  font-size: 14px;
-  font-weight: bold;
-  transition: all 0.2s ease-in-out;
+.btn {
+  background-color: #666!important;
+  border: none!important;
+  font-size: 14px!important;
+  font-weight: bold!important;
+  transition: all 0.2s ease-in-out!important;
 }
 
-.btn-primary:hover {
-  background-color: #d60052;
-  transform: translateY(-2px);
+.btn:hover {
+  background-color: darkslategray!important;
+  transform: translateY(-2px)!important;
 }
