--- a/src/components/pages/projectspage/Projects.css
+++ b/src/components/pages/projectspage/Projects.css
@@ -8,17 +8,10 @@
   margin-bottom: 30px;
 }
 
-.card {
-  background-color: #fff;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-}
+
 
 .card-img-top {
-  height: auto;
+  height: 300px;
   width: 100%;
   object-fit: cover;
   flex-grow: 1;
@@ -35,14 +28,21 @@
 }
 
 .btn {
-  background-color: #666!important;
-  border: none!important;
-  font-size: 14px!important;
-  font-weight: bold!important;
-  transition: all 0.2s ease-in-out!important;
+  background-color: #666 !important;
+  border: none !important;
+  font-size: 14px !important;
+  font-weight: bold !important;
+  transition: all 0.2s ease-in-out !important;
 }
 
 .btn:hover {
-  background-color: darkslategray!important;
-  transform: translateY(-2px)!important;
+  background-color: darkslategray !important;
+  transform: translateY(-2px) !important;
+}
+
+
+@media (min-width: 992px) {
+  .card {
+    min-height: 600px;
+  }
 }
